--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,7 @@ Flask==3.0.1
 Flask-Cors==4.0.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+gunicorn==21.2.0
 h11==0.14.0
 httptools==0.6.1
 idna==3.6
