--- a/frontend/app/ios/app/Info.plist
+++ b/frontend/app/ios/app/Info.plist
@@ -34,7 +34,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>The camera is accessed for the first time</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>The microphone is accessed for the first time</string>
 	<key>NSPhotoLibraryUsageDescription</key>
