--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-config": "^1.5.1",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.1",
