--- a/frontend/app/.env
+++ b/frontend/app/.env
@@ -1,1 +1,3 @@
 REACT_APP_BACKEND_URL="https://receipt-budget-app-e1610f5f91e7.herokuapp.com"
+
+FLASK_BACKEND_DO="https://lionfish-app-inq3b.ondigitalocean.app"
