--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nghinv/react-native-swipe-row": "^0.1.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.17",
     "react": "18.2.0",
     "react-native": "0.73.2",
@@ -26,7 +27,7 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-vision-camera": "^3.8.2"
+    "react-native-vision-camera": "^3.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
