--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -10,10 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
     "@nghinv/react-native-swipe-row": "^0.1.1",
+    "@react-native-community/art": "^1.2.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.17",
+    "@ui-kitten/components": "^5.3.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-config": "^1.5.1",
@@ -23,9 +26,11 @@
     "react-native-image-picker": "^7.1.0",
     "react-native-month-year-picker": "^1.9.0",
     "react-native-navigation": "^7.37.2",
+    "react-native-pie": "^1.1.2",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-svg": "^15.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-vision-camera": "^3.9.2"
   },
